syntax = "proto3";
package seiprotocol.seichain.dex;

import "gogoproto/gogo.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = false;

  uint64 price_snapshot_retention    = 1 [
    (gogoproto.moretags) = "yaml:\"price_snapshot_retention\"",
    (gogoproto.jsontag) = "price_snapshot_retention"
  ];
  string sudo_call_gas_price = 2 [
    (gogoproto.jsontag)   = "sudo_call_gas_price",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  uint64 begin_block_gas_limit = 3 [
    (gogoproto.jsontag)   = "begin_block_gas_limit",
    (gogoproto.moretags) = "yaml:\"begin_block_gas_limit\""
  ];
  uint64 end_block_gas_limit = 4 [
    (gogoproto.jsontag)   = "end_block_gas_limit",
    (gogoproto.moretags) = "yaml:\"end_block_gas_limit\""
  ];
  uint64 default_gas_per_order = 5 [
    (gogoproto.jsontag)   = "default_gas_per_order",
    (gogoproto.moretags) = "yaml:\"default_gas_per_order\""
  ];
  uint64 default_gas_per_cancel = 6 [
    (gogoproto.jsontag)   = "default_gas_per_cancel",
    (gogoproto.moretags) = "yaml:\"default_gas_per_cancel\""
  ];
  uint64 min_rent_deposit = 7 [
    (gogoproto.jsontag)   = "min_rent_deposit",
    (gogoproto.moretags) = "yaml:\"min_rent_deposit\""
  ];
}
